--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -13,13 +13,11 @@ This wiki is your portal to documentation and other resources for SDL 1.3.
 Use the links under the '''Navigation Links''' heading on the left-hand menu to access:
 
 * API reference [[CategoryAPI|by name]] or [[APIByCategory|by category]]
-* [[Tutorials|tutorials]]
-* [[Articles|articles]]
-* [[Books|books]]
+* [[Tutorials|Tutorials]]
+* [[Articles|Articles]]
+* [[Books|Books]]
 * [[FAQs]]
-* [http://forums.libsdl.org/ forums]
-
-<<Color2(green,Can the bullet items be capitalized to match the left column?)>>
+* [http://forums.libsdl.org/ Forums]
 
 Users wishing to contribute content should follow the guidelines provided in the [http://wiki.libsdl.org/moin.cgi/APIContributionStyleGuide SDL API Contribution Style Guide].
 
@@ -44,7 +42,7 @@ This library is distributed under [http://www.libsdl.org/license-lgpl.php GNU LG
 * Window Management
 * Rendering
 
-''''' Input'''''
+'''''Input Events'''''
 
 * Events provided for:
 * Application visibility changes
