--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -15,8 +15,8 @@
 Introduction to Initialization
 
 {|
-|<tablewidth="100%">'''View Information and Functions Related to...'''
-|'''View the Header'''
+|<tablewidth="100%">'''View Information And Functions Related To...'''
+|'''View The Header'''
 |-
 |[CategoryInit|Initialization & Shutdown]] 
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL.h SDL.h] 
@@ -33,8 +33,8 @@ Introduction to Initialization
 Introduction to Video
 
 {|
-|<tablewidth="100%">'''View Information and Functions Related to...'''
-|'''View the Header'''
+|<tablewidth="100%">'''View information and functions related to...'''
+|'''View the header'''
 |-
 |[CategoryVideo|Display Management, Window Management and Rendering]] 
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_video.h SDL_video.h] 
@@ -87,7 +87,7 @@ Introduction to Force Feedback
 
 
 === Audio ===
-[[#AudioI|Introduction to Audio]]
+Introduction to Audio
 
 {|
 |<tablewidth="100%">'''View Information and Functions Related to...'''
@@ -99,7 +99,7 @@ Introduction to Force Feedback
 
 
 === File I/O Abstraction ===
-[[#I.2BAC8-OI|Introduction to File I/O Abstraction]]
+Introduction to File I/O Abstraction
 
 {|
 |<tablewidth="100%">'''View Information and Functions Related to...'''
