--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -111,7 +111,7 @@ Introduction to File I/O Abstraction
 
 
 === Shared Object Support ===
-[[#SOSI|Introduction to Shared Object Support]]
+Introduction to Shared Object Support
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -123,7 +123,7 @@ Introduction to File I/O Abstraction
 
 
 === Threads ===
-[[#ThreadsI|Introduction to Threads]]
+Introduction to Threads
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -141,7 +141,7 @@ Introduction to File I/O Abstraction
 
 
 === Timers ===
-[[#TimersI|Introduction to Timers]]
+Introduction to Timers
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -152,8 +152,8 @@ Introduction to File I/O Abstraction
 |}
 
 
-=== CPU Feature Detection ===
-[[#CPUI|Introduction to CPU Feature Detection]]
+=== Platform and CPU Information ===
+Introduction to Platform and CPU Information
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -164,11 +164,14 @@ Introduction to File I/O Abstraction
 |-
 |[CategoryPlatform|Platform Detection]] 
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_platform.h SDL_platform.h] 
+|-
+|[CategoryEndian|Byte Order and Byte Swapping]] 
+|[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_endian.h SDL_endian.h] 
 |}
 
 
 === Power Management ===
-[[#PowerI|Introduction to Power Management]]
+Introduction to Power Management
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -176,18 +179,6 @@ Introduction to File I/O Abstraction
 |-
 |[CategoryPower|Power Management Status]] 
 |[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_power.h SDL_power.h] 
-|}
-
-
-=== Endian Independence ===
-[[#EndianI|Introduction to Endian Independence (Byte Order and Byte Swapping)]]
-
-{|
-|<tablewidth="100%">'''View information and functions related to...'''
-|'''View the header'''
-|-
-|[CategoryEndian|Byte Order and Byte Swapping]] 
-|[[http://hg.libsdl.org/SDL/file/68dfd6df47da/include/SDL_endian.h SDL_endian.h] 
 |}
 
 
