--- a/APIByCategory.mediawiki
+++ b/APIByCategory.mediawiki
@@ -9,10 +9,7 @@
 
 = SDL 1.3 API by Category =
 
-== Functions by Type ==
-
-=== Basics ===
-Introduction to the Basics
+== Basics ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -29,8 +26,7 @@ Introduction to the Basics
 |}
 
 
-=== Video ===
-Introduction to Video
+== Video ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -53,8 +49,7 @@ Introduction to Video
 |}
 
 
-=== Input Events ===
-Introduction to Input Events
+== Input Events ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -74,8 +69,7 @@ Introduction to Input Events
 |}
 
 
-=== Force Feedback ===
-Introduction to Force Feedback
+== Force Feedback ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -86,8 +80,7 @@ Introduction to Force Feedback
 |}
 
 
-=== Audio ===
-Introduction to Audio
+== Audio ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -98,8 +91,7 @@ Introduction to Audio
 |}
 
 
-=== File I/O Abstraction ===
-Introduction to File I/O Abstraction
+== File I/O Abstraction ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -110,8 +102,7 @@ Introduction to File I/O Abstraction
 |}
 
 
-=== Shared Object Support ===
-Introduction to Shared Object Support
+== Shared Object Support ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -122,8 +113,7 @@ Introduction to Shared Object Support
 |}
 
 
-=== Threads ===
-Introduction to Threads
+== Threads ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -140,8 +130,7 @@ Introduction to Threads
 |}
 
 
-=== Timers ===
-Introduction to Timers
+== Timers ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -152,8 +141,7 @@ Introduction to Timers
 |}
 
 
-=== Platform and CPU Information ===
-Introduction to Platform and CPU Information
+== Platform and CPU Information ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -170,8 +158,7 @@ Introduction to Platform and CPU Information
 |}
 
 
-=== Power Management ===
-Introduction to Power Management
+== Power Management ==
 
 {|
 |<tablewidth="100%">'''View information and functions related to...'''
@@ -183,8 +170,11 @@ Introduction to Power Management
 
 
 ----
+----
+----
+<<Color2(green,Temp Section to be moved)>>
 
-== Introductory Information by Category ==
+Introductory Information by Category
 
 <<Color2(green,I think we decided this introductory information belongs on this page but I have a note that it should be on the Category<code></code>Header pages.  Where would you like it?)>>
 
@@ -301,23 +291,3 @@ int test_haptic( SDL_Joystick * joystick ) {
 <span id="PowerI"></span>'''Introduction to Power Management'''
 
 <span id="EndianI"></span>'''Introduction to Endian Independence (Byte Order and Byte Swapping)'''
-
-----
-<<Color2(green,This section is junk I don't want to lose yet but will most likely delete. Ignore it.)>> -OR -
-
-In each section:
-
-* For more detailed information on each Category, including how to get started, answers to common questions and errors, and more, click the '''Introduction to...''' link in each section
-* For a list of functions found in each header click the link under '''Related Functions'''
-* You will find links to detailed pages about each function on those pages
-* For the header file itself click the link under '''Header''' in each section
-
--OR-
-
-Each section below includes
-
-* a link to introductory information about each function type including, where relevant:
-* <<Color2(green,Add a list here of the common sections found on each introductory page as the list develops.)>>
-* a link to one or more pages containing a complete list of functions belonging to each header in that category
-* listed functions link to detailed information on each
-* a link to the header page
