--- a/SDL_GL_UnloadLibrary.mediawiki
+++ b/SDL_GL_UnloadLibrary.mediawiki
@@ -1,3 +1,27 @@
-6700uz  <a href="http://wxwjzbqgyhwo.com/">wxwjzbqgyhwo</a>, [url=http://ltstutnmobed.com/]ltstutnmobed[/url], [link=http://popotgeprcee.com/]popotgeprcee[/link], http://jtjwikjrqywl.com/
+<!-- pragma section-numbers off -->
+<!-- pragma disable-camelcase -->
+'''DRAFT'''
+
+= SDL_GL_UnloadLibrary =
+Use this function to unload the OpenGL library previously loaded by [[SDL_GL_LoadLibrary]]().
+
+
+== Syntax ==
+```c++
+void SDL_GL_UnloadLibrary(void)
+```
+
+== Code Examples ==
+```c++
+You can add your code example here
+```
+
+== Remarks ==
+''You can add useful comments here''
+
+== Related Functions ==
+:[[SDL_GL_GetProcAddress]]
+:[[SDL_GL_LoadLibrary]]
+
 ----
-CategoryAtomic
+[[CategoryAPI]], [[CategoryVideo]]
