--- a/SDL_Init.mediawiki
+++ b/SDL_Init.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_Init =
-Initializes the SDL library.  This must be called before using any other SDL function.
+Use this function to initialize the SDL library.  This must be called before using any other SDL function.
 
 
 == Syntax ==
