--- a/SDL_PushEvent.mediawiki
+++ b/SDL_PushEvent.mediawiki
@@ -8,7 +8,7 @@ Use this function to add an event to the event queue.
 
 == Syntax ==
 ```c++
-int SDL_PushEvent(SDL_Event* event);
+int SDL_PushEvent(SDL_Event* event)
 ```
 
 == Function Parameters ==
