--- a/Home.mediawiki
+++ b/Home.mediawiki
@@ -9,13 +9,15 @@
 This wiki is your portal to documentation and other resources for SDL 1.3.
 
 
+/!\ Due to spammers, write access to this wiki is disabled by default.  If you would like to contribute to this wiki, we welcome your contribution!  Just send e-mail to slouken@libsdl.org
+
 == Using the SDL documentation Wiki ==
 Use the links under the '''Navigation Links''' heading on the left-hand menu to access:
 
 * API reference [[CategoryAPI|by name]] or [[APIByCategory|by category]]
-* [[Tutorials|Tutorials]]
-* [[Articles|Articles]]
-* [[Books|Books]]
+* [[Tutorials]]
+* [[Articles]]
+* [[Books]]
 * [[FAQs]]
 * [http://forums.libsdl.org/ Forums]
 
@@ -98,7 +100,6 @@ This library is distributed under [http://www.libsdl.org/license-lgpl.php GNU LG
 '''''Power Management'''''
 
 * Querying power management status
-
 
 === What platforms does SDL run on? ===
 '''''Windows'''''
