--- a/APIContributionStyleGuide.mediawiki
+++ b/APIContributionStyleGuide.mediawiki
@@ -10,7 +10,9 @@ This guide provides instructions for adding your own content to the Code Example
 
 Anyone may contribute Code Examples or Remarks per the instructions in this Style Guide.  
 
-If you would like to make other contributions, edit existing content, or create new pages, please email docs@libsdl.org to coordinate efforts.
+/!\ Due to spammers, write access to this wiki is disabled by default.  If you would like to contribute to this wiki, we welcome your contribution!  Just send e-mail to slouken@libsdl.org
+
+If you would like to make other contributions beyond code examples and remarks, such as editing existing content or creating new pages, please email docs@libsdl.org to coordinate efforts.
 
 == The Basics ==
 
