update content (from Sam)

--- a/SDL_ClearError.mediawiki
+++ b/SDL_ClearError.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_ClearError =
-Use this function to ^clear an error message^.
+Use this function to clear any previous errors.
 
 
 == Syntax ==
