--- a/Books.mediawiki
+++ b/Books.mediawiki
@@ -15,3 +15,7 @@
 * [http://www.amazon.com/exec/obidos/ASIN/1592000304/acmorg-20 Focus On SDL] (The Premier Press Game Development Series) by Ernest Pazera
 : This book has received many positive reviews from users!
 : ''"From setting up your system to incorporating networking and user interface components, Focus On SDL gives you the tools you need in one comprehensive guide."'' ~-(Amazon.com)-~
+
+* [http://www.amazon.com/Structures-Programmers-Premier-Press-Development/dp/1931841942/ref=sr_1_1?ie=UTF8&s=books&qid=1273790911&sr=1-1 Data Structures for Game Programmers (Premier Press Game Development)] by Ron Penton
+: The included CD contains an SDL Primer by Ernest Pazera.
+: ''"The bottom line is: this book takes the boring and difficult subject of data structures, and turns them into something anyone can understand, in a fun and exciting way. 5 stars!"'' ~-(Amazon.com)-~
