--- a/SDL-gsoc2010_gesture.mediawiki
+++ b/SDL-gsoc2010_gesture.mediawiki
@@ -5,7 +5,7 @@ The code is available here:
 http://hg.libsdl.org/SDL-gsoc2010_gesture
 
 
-== Status Updates ==
+== Status ==
 
 == Documentation ==
 
