--- a/SDL-gsoc2010_shaped_windows.mediawiki
+++ b/SDL-gsoc2010_shaped_windows.mediawiki
@@ -4,7 +4,7 @@ The code is available here:
 http://hg.libsdl.org/SDL-gsoc2010_shaped_windows
 
 
-== Status Updates ==
+== Status ==
 
 == Documentation ==
 
