--- a/SDL_UnloadObject.mediawiki
+++ b/SDL_UnloadObject.mediawiki
@@ -14,7 +14,7 @@ void SDL_UnloadObject(void* handle)
 == Function Parameters ==
 {|
 |'''handle'''
-|a pointer to the object handle
+|^a pointer to the object handle^
 |}
 
 == Code Examples ==
