--- a/SDL-gsoc2010_shaped_windows.mediawiki
+++ b/SDL-gsoc2010_shaped_windows.mediawiki
@@ -25,7 +25,7 @@ input_mask surface -(1)-> 8bit alpha -(2)-> 1bit mask -(3)-> 2D region -(4)-> ar
 
 ==== Regions ====
 
-Most commonly used is code that essentially sets a "region" which defines which pixels are shown and which are not. Most algorithms uses the Win32 region functions to compose this shape which is simple but works. If Cocoa also uses a shape, it may be good to break out a common "2D shape calculation" algorithm that applies to both architectures. In any case, the input to this process is a binarized (1bit) image. Note that you don't get any "blending" on the edges with this approach.
+Most commonly used is code that essentially sets a "region" which defines which pixels are shown and which are not. Most algorithms uses the Win32 region functions to compose this shape which is simple but works. In any case, the input to this process is a binarized (1bit) image. Note that you don't get any "blending" on the edges with this approach.
 
 Here some other sample code:
 * Sets shape by generating regions: http://comrade.ownz.com/docs/shapewnd.html
@@ -41,3 +41,11 @@ Now there is another way to provide transparency using a alpha-bitmap in Windows
 * Sample code: http://www.nuonsoft.com/blog/2009/05/27/how-to-use-updatelayeredwindow/
 
 Even with this approach a shape may still be important to get rid of clicks to the window - a window that is almost transparent (i.e. alpha=1) seems to have no shape, but will still receive clicks on those pixels. Note also, that the layered window API is not supported on WinCE (but the shape API is).
+
+=== OSX ===
+
+If Cocoa also uses also a shape, it may be good to break out a common "2D shape calculation" algorithm that applies to both architectures. 
+
+=== Shape Regions ===
+
+Note that a shape structure made out of regions has a list of 2D points defining a polygon AND a add/delete flag. For example a doughnut is made of two circle regions, one added and one deleted.
